--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
 
     <div class="container">
-        <h2>BGMI Registration</h2>
+        <h2>PowerPlay BGMI Registration</h2>
+        <h4>Please fill all the fields to see the payment button automatically</h4>
         <form id="registration-form">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
