feat: adds background and changes amount

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <div class="container">
         <h2>PowerPlay BGMI Registration</h2>
         <h4>Please do the payment to fill the details</h4>
-        <form id="payment-form">
-            <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PCXZCVGRSIOD60"
+        <form>
+            <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PCuDAuvgGiR0mp"
                 async> </script>
-
         </form>
     </div>
 
