adds styling and colour

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erangel Solo Showdown - PowerPlay BGMI</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> <!-- Google Font -->
 </head>
 
 <body>
@@ -42,7 +43,7 @@
         <p>Reach out via email: <a href="mailto:powerplaybgmi5@gmail.com">powerplaybgmi5@gmail.com</a></p>
 
         <h4>Stay Connected</h4>
-        <ul>
+        <ul class="social-links">
             <li><a href="https://t.me/+8N4kEA0ANmdhNzhl" target="_blank">Telegram</a></li>
             <li><a href="https://www.instagram.com/powerplaybgmi/" target="_blank">Instagram</a></li>
         </ul>
