--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <title>Erangel Solo Showdown - PowerPlay BGMI</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Google Font -->
 </head>
 
 <body>
     <div class="container">
-        <h2>Please complete the payment to register:</h4>
-            <form>
-                <script src="https://checkout.razorpay.com/v1/payment-button.js"
-                    data-payment_button_id="pl_PFE7ez5jcCfD6p" async> </script>
-            </form>
+        <h2>Complete the Payment to Register</h2>
+        <form>
+            <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_PFE7ez5jcCfD6p" async></script>
+        </form>
     </div>
 </body>
 
